<resources>
    <string name="app_name">240 - Family Map Client</string>
    <string name="fileMenu" />
    <string name="LifeStoryLines">Life Story Lines</string>
    <string name="FamilyTreeLines">Family Tree Lines</string>
    <string name="LifeStoryLinesExplanation">Show Life Story Lines</string>
    <string name="FamilyTreeLinesExplanation">Show Family Tree Lines</string>
    <string name="SpouseLines">Spouse Lines</string>
    <string name="SpouseLinesExplanation">Show Spouse Lines</string>
    <string name="GenderEventsExplanation">Show Events of the Above Gender</string>
    <string name="FemaleEvents">Female Events</string>
    <string name="MaleEvents">Male Events</string>
    <string name="MothersSideExplanation">Show Mother\'s Side of Family</string>
    <string name="MothersSide">Mother\'s Side</string>
    <string name="FathersSideExplanation">Show Father\'s Side of Family</string>
    <string name="FathersSide">Father\'s Side</string>
    <string name="settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="LogoutExplanation">Return to Login Screen</string>
    <string name="PersonName">First Name</string>
    <string name="PersonLastName">Last Name</string>
    <string name="PersonGender">Gender</string>
    <string name="EventTitle">Life Events</string>
    <string name="FamilyTitle">Family Members</string>
    <string name="PersonGenderBox">Gender</string>
    <string name="PersonLastNameBox">Last Name</string>
    <string name="PersonNameBox">First Name</string>
    <string name="this_is_my_map_fragment">This is my Map fragment!!</string>
    <string name="events">Events</string>
    <string name="eventtype">EventType</string>
    <string name="type_your_search_query_below">Type your Search Query Below</string>
    <string name="person">PERSON</string>
    <string name="family">Events</string>
    <string name="familyRelationship">EventType</string>
</resources>