<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="3"
    android:layout_margin="16dp"
    tools:context=".UI.PersonActivity">

    <TableRow>

        <TextView
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end"
            android:text="@string/PersonName"
            android:textSize="18sp"
            android:textStyle="bold" />


    </TableRow>
    <TableRow>

        <TextView
            android:id="@+id/FirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/PersonNameBox"
            android:textStyle="italic" />

    </TableRow>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
    <TableRow>

        <TextView
            android:id="@+id/LastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/PersonLastName"
            android:textSize="18sp"
            android:textStyle="bold" />
    </TableRow>
    <TableRow>

        <TextView
            android:id="@+id/LastNameBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/PersonLastNameBox"
            android:textStyle="italic" />
    </TableRow>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
    <TableRow>

        <TextView
            android:id="@+id/Gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/PersonGender"
            android:textSize="18sp"
            android:textStyle="bold" />
    </TableRow>
    <TableRow>

        <TextView
            android:id="@+id/GenderBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/PersonGenderBox"
            android:textStyle="italic" />
    </TableRow>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <ExpandableListView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/expandableListView"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        android:dividerHeight="1dp"
        android:divider="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        tools:context=".PersonActivity"/>
</TableLayout>